graphql-parser/tests/snapshots/tests__query_directive__parse_query__unix.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Ok(
    Document {
        definitions: [
            Operation(
                OperationDefinition {
                    position: Pos(1:1),
                    kind: Query,
                    description: None,
                    name: None,
                    variable_definitions: [],
                    directives: [
                        Directive {
                            position: Pos(1:7),
                            name: "directive",
                            arguments: [],
                        },
                    ],
                    selection_set: SelectionSet {
                        span: (
                            Pos(1:18),
                            Pos(3:1),
                        ),
                        items: [
                            Field(
                                Field {
                                    position: Pos(2:3),
                                    alias: None,
                                    name: "node",
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        span: (
                                            Pos(2:3),
                                            Pos(2:3),
                                        ),
                                        items: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ],
    },
)
